--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bootstrap4==0.1.0
 Django==3.1.8
 django-bootstrap4==2.3.1
 django-environ==0.4.5
+gunicorn==20.1.0
 Pillow==8.2.0
 pytz==2021.1
 soupsieve==2.2.1
