--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,41 @@
 version: "3.7"
 services:
-  django:
-    image: django_test_image.3
+  nginx:
+    image: nginx:1.19.5
+    networks:
+      - network
+    volumes:
+      - /home/django_course/nginx.conf:/etc/nginx/nginx.conf
+      - static-volume:/data/static
+      - media-volume:/data/media
     ports:
-      - 8000:8000
+      - 80:80
+
+  django_container_gunicorn:
+    image: django_test_image:4
+    networks:
+      - network
+    volumes:
+      - static-volume:/home/Django-Pinterest/staticfiles
+      - media-volume:/home/Django-Pinterest/media
+
+  mariadb:
+    image: mariadb:10.5
+    networks:
+      - network
+    volumes:
+      - maria-database:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: dari9308
+      MYSQL_DATABASE: django
+      MYSQL_USER: django
+      MYSQL_PASSWORD: dari9308
+
+networks:
+  network:
+
+volumes:
+  static-volume:
+  media-volume:
+  maria-database:
+
